# RealEstateKPI

./: .replit  app.py  replit.md  users_db.json
.devcontainer/: devcontainer.json
مجلد جديد/: pyproject.toml  real_estate_property_data(1)9.csv
